fixed get, had to remove hard coded statement which caused it to not display content other than text files. moving onto threading and then finalizing the 400 as it is not working at least to my knowledge